Try out accordion collapsing fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 
+.collapsing {
+    transition: height 0.6s;
+}
+
 /** General css style */
 
 /* General */
